plugins {
    `java-library`
    `maven-publish`
    signing
    id("org.jreleaser") version "1.22.0"
}

// Project metadata from gradle.properties
group = property("group") as String
version = property("version") as String

val projectName: String by project
val projectDescription: String by project
val projectUrl: String by project
val projectScmUrl: String by project
val licenseName: String by project
val licenseUrl: String by project
val developerName: String by project
val developerEmail: String by project
val developerOrganization: String by project
val developerOrganizationUrl: String by project

val sonatypeUsername: String by project
val sonatypePassword: String by project

// Dependency versions
val vertxVersion: String by project
val jspecifyVersion: String by project
val jacksonVersion: String by project
val keelLoggerApiVersion: String by project

repositories {
    // Internal Nexus repository for dependencies
    maven {
        name = "InternalNexus"
        url = uri(findProperty("internalNexusPublicUrl") as String)
        credentials {
            username = findProperty("internalNexusUsername") as String
            password = findProperty("internalNexusPassword") as String
        }
        // Allow insecure protocol if needed (not recommended for production)
        // isAllowInsecureProtocol = false
    }

    mavenCentral()
}

dependencies {
    // Keel Logger API
    api("io.github.sinri:keel-logger-api:$keelLoggerApiVersion")

    // Vert.x dependencies (matching module-info.java requires transitive)
    api("io.vertx:vertx-core:$vertxVersion")
    api("io.vertx:vertx-config:$vertxVersion")
    implementation("io.vertx:vertx-config-yaml:$vertxVersion")
    implementation("io.vertx:vertx-json-schema:$vertxVersion")

    // Jackson dependencies (matching module-info.java requires transitive)
    api("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
    api("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion")

    // API dependency (transitive)
    // https://mvnrepository.com/artifact/org.jspecify/jspecify
    compileOnly("org.jspecify:jspecify:$jspecifyVersion")
    testCompileOnly("org.jspecify:jspecify:$jspecifyVersion")

    // Test dependencies
    testImplementation("io.vertx:vertx-junit5:$vertxVersion")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
    withSourcesJar()
    withJavadocJar()
}

tasks.compileJava {
    options.encoding = "UTF-8"
    options.release.set(17)
    // Gradle will automatically compile Java modules
}

tasks.compileTestJava {
    options.encoding = "UTF-8"
    options.release.set(17)
}

// Configure resources (exclude config.properties like Maven)
tasks.processResources {
    exclude("config.properties")
}

// Configure test task (matching Maven surefire configuration)
tasks.test {
    useJUnitPlatform()
    include("io/github/sinri/keel/base/**/*Test.class")
}

// Configure JavaDoc (matching Maven javadoc plugin configuration)
tasks.javadoc {
    options.encoding = "UTF-8"
    if (options is StandardJavadocDocletOptions) {
        val stdOptions = options as StandardJavadocDocletOptions
        stdOptions.charSet = "UTF-8"
        stdOptions.docEncoding = "UTF-8"
        stdOptions.memberLevel = JavadocMemberLevel.PROTECTED
        stdOptions.docTitle = "$projectName $version Document"
        stdOptions.windowTitle = "$projectName $version Document"
        stdOptions.addBooleanOption("html5", true)
        stdOptions.addStringOption("Xdoclint:-missing", "-quiet") // 提示缺失的注释
    }
}

// Publishing configuration
publishing {
    publications {
        create<MavenPublication>("mavenJava") {
            from(components["java"])
            // 显式绑定版本号，确保与项目版本一致
            version = project.version.toString()

            pom {
                name.set(projectName)
                description.set(projectDescription)
                url.set(projectUrl)

                licenses {
                    license {
                        name.set(licenseName)
                        url.set(licenseUrl)
                    }
                }

                developers {
                    developer {
                        name.set(developerName)
                        email.set(developerEmail)
                        organization.set(developerOrganization)
                        organizationUrl.set(developerOrganizationUrl)
                    }
                }

                scm {
                    url.set(projectScmUrl)
                }
            }
        }
    }

    repositories {
        maven {
            // name = "mixed"
            if (version.toString().endsWith("SNAPSHOT")) {
                url = uri(findProperty("internalNexusSnapshotsUrl") as String)
                credentials {
                    username = findProperty("internalNexusUsername") as String
                    password = findProperty("internalNexusPassword") as String
                }
            } else if (version.toString().contains(Regex("-[A-Za-z]+"))) {
                url = uri(findProperty("internalNexusReleasesUrl") as String)
                credentials {
                    username = findProperty("internalNexusUsername") as String
                    password = findProperty("internalNexusPassword") as String
                }
            } else {
//                url = uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/")
//                credentials {
//                    username = findProperty("ossrhUsername") as String? ?: System.getenv("OSSRH_USERNAME")
//                    password = findProperty("ossrhPassword") as String? ?: System.getenv("OSSRH_PASSWORD")
//                }
                url = uri(layout.buildDirectory.dir("staging-deploy"))
            }
        }
    }
}

// 在 publishing 配置块之后添加
tasks.named("publish") {
    // 仅当版本是正式版本时，自动触发 jreleaserDeploy
    if (!version.toString().endsWith("SNAPSHOT") &&
        !version.toString().contains(Regex("-[A-Za-z]+"))
    ) {
        doFirst {
            logger.lifecycle(">>> Publishing release version $version")
            logger.lifecycle(">>> Will automatically deploy to Maven Central after staging")
        }
        finalizedBy("jreleaserDeploy")
    }
}

// Signing configuration
signing {
    // Use GnuPG command for signing (configured in gradle.properties)
    useGpgCmd()

    // Only sign if not a SNAPSHOT and signing credentials are available
    setRequired({
        !version.toString().endsWith("SNAPSHOT") && gradle.taskGraph.hasTask("publish")
    })
    sign(publishing.publications["mavenJava"])
}

// JReleaser 配置
jreleaser {
     signing {
         pgp {
             active.set(org.jreleaser.model.Active.ALWAYS)
             armored.set(true)
         }
     }
    deploy {
        maven {
            mavenCentral {
                active = org.jreleaser.model.Active.RELEASE
                register("sonatype") { // "sonatype" 为自定义名称
                    active.set(org.jreleaser.model.Active.ALWAYS)
                    // 如果使用新的 Central Portal (https://central.sonatype.com)
                    url.set("https://central.sonatype.com/api/v1/publisher")
                    // 指定制品暂存目录，JReleaser 会从这里读取 POM 和 JAR
                    stagingRepository("build/staging-deploy")

                    // 认证信息通常通过环境变量提供，或在这里显式设置
                    username.set(sonatypeUsername)
                    password.set(sonatypePassword)

                    enabled.set(true)
                }
            }
        }
    }
}